syntax = "proto3";
option csharp_namespace = "SmartShop.OrderService";

service OrderServiceProto{
	rpc MakeOrder(MakeOrderModel) returns (OrderModelMade);
	rpc DeleteOrder(OrderModelsId) returns (OrderModelDeleted);
	rpc ShipOrder (OrderModelsId) returns (OrderModelShipped);
	rpc GetOrders(GetOrderModels) returns (stream OrderModel);
}

message OrderModel{

	int32 id = 1;
	string userName = 2;
	string userEmail = 3;
	string address = 4;
	bool shipped = 5;
	string productName = 7;
	int32 price = 8;
	
}

message MakeOrderModel{
	string address = 1;
}

message OrderModelMade{

}

message OrderModelsId{
	int32 id = 1;
}

message OrderModelShipped{

}

message OrderModelDeleted{

}

message GetOrderModels{

}
